+ добавлен README с инструкциями по быстрому развёртыванию * изменен build-файл для ant, в котором происходит компиляцмя js-кода, для возможности выпускать debug-версию (без компиляции) * произведен тюнинг вывода точек (чтобы не возникала ситуация с пустой картой) * изменен favicon * мелкие улучшения в отображении карты * видоизменена svg-анимация

--- a/geowidsrv/web/index.html
+++ b/geowidsrv/web/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Geowid</title>
-    <link rel="shortcut icon" href="pics/favicon.png" type="image/png">
     <link href='http://fonts.googleapis.com/css?family=Dosis:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style/leaflet.css" />
     <!--[if lte IE 8]>
@@ -20,7 +19,7 @@
     <div id="map"></div>
     <div id="wait">
         <div id="waitpic"><img src="pics/waitpic.gif" height="64px" width="64px" alt="Loading..."></div>
-        <div class="text" id="message"></div>
+        <div class="text" id="message">Waiting for data...</div>
     </div>
     <div id="view-dialog" class="text"></div>
     <script src="js/geowid.js"></script>
